[package]
name = "hq"
version = "0.1.0"
authors = ["Mariell Hoversholm <mariell.hoversholm@paf.com>"]
edition = "2021"
license = "MPL-2.0"

[dependencies]
serde_json = "~1"
color-eyre = "~0.5"
once_cell = "~1"
maplit = "~1"
thiserror = "~1"
ron = "~0.7"

[dependencies.tracing]
version = "~0.1"
features = ["release_max_level_debug"]

[dependencies.tracing-subscriber]
version = "~0.3"
features = ["env-filter"]

[dependencies.tokio]
version = "~1"
features = ["full"]

[dependencies.serde]
version = "~1"
features = ["derive"]

[dependencies.reqwest]
version = "~0.11"
default-features = false
features = ["rustls-tls", "gzip", "cookies"]

[dependencies.mlua]
version = "~0.7"
features = [
	"lua54",
	"vendored",
	"async",
	"send",
	"serialize",
]

[dependencies.clap]
version = "~3.1"
features = ["derive"]
